# dteam-practical

./: README.md  pyproject.toml
cvproject/: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
cvproject/audit/: middleware.py  models.py  tests.py  urls.py  views.py
cvproject/audit/migrations/: 0001_initial.py
cvproject/audit/templates/audit/: logs.html
cvproject/cv_rest/: apps.py  serializers.py  tests.py  urls.py  views.py
cvproject/cvproject/: celery.py  settings.py  urls.py
cvproject/main/: cv_fixture.json  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
cvproject/main/migrations/: 0001_initial.py
cvproject/main/templates/main/: cv_detail.html  cv_list.html
cvproject/task5_app/: apps.py  context_processors.py  urls.py  views.py
cvproject/task5_app/templates/task5_app/: settings.html
